Fixes width of selects inside tables on narrow screens

--- a/Themes/default/css/responsive.css
+++ b/Themes/default/css/responsive.css
@@ -429,6 +429,9 @@
 		margin: 0;
 		padding: 0;
 	}
+	.table_grid select {
+		max-width: 85vw;
+	}
 	#private, #enclose {
 		width: 95%;
 	}
